src/test/resources/semantic/custom/reject/wrongFunctionCallParameterType2.ul
void main() {
    foo(4.6, "hello");
}

void foo(float one, char two) {
}
